# faasbase

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json
apps/builder-service/: .gitignore  Cargo.toml
apps/builder-service/src/: builder.rs  engine_client.rs  types.rs
engine/: Cargo.toml  Dockerfile  README.md
engine/migrations/2022-09-12-080435_create_tables/: down.sql  up.sql
engine/migrations/2022-11-26-051801_create_database/: down.sql  up.sql
engine/migrations/2023-02-11-114646_application_builds_alter/: down.sql  up.sql
engine/migrations/2023-02-11-144449_application_build_Dates/: down.sql  up.sql
engine/migrations/2023-02-11-164259_application_deployed_version/: down.sql  up.sql
engine/src/: main.rs  schema.rs  state.rs
engine/src/domains/: mod.rs  router.rs  service.rs
engine/src/domains/application/: controller.rs  model.rs  service.rs
engine/src/domains/application_build/: builder.rs  controller.rs  mod.rs  model.rs  service.rs
engine/src/domains/application_collaborator/: controller.rs  mod.rs
engine/src/domains/application_generator/: service.rs
engine/src/domains/application_log/: controller.rs  mod.rs  model.rs
engine/src/domains/application_resource/: controller.rs  model.rs
engine/src/domains/authn/: controller.rs  mod.rs  service.rs
engine/src/domains/cluster/: controller.rs  model.rs  service.rs
engine/src/domains/database/: controller.rs  model.rs
engine/src/domains/database_table/: controller.rs  model.rs
engine/src/domains/database_table_field/: controller.rs  mod.rs  model.rs  service.rs
engine/src/domains/function/: controller.rs  model.rs  service.rs
engine/src/domains/function_build/: controller.rs  model.rs
engine/src/domains/function_collaborator/: controller.rs  mod.rs
engine/src/domains/health/: controller.rs  mod.rs
engine/src/domains/user/: controller.rs  service.rs
engine/src/domains/workers/: controller.rs  mod.rs
engine/src/domains/workspace_audit_logs/: controller.rs  service.rs
engine/src/domains/workspace_members/: controller.rs  service.rs
engine/src/domains/workspaces/: controller.rs  model.rs  service.rs
engine/src/extras/: mod.rs  types.rs
engine/src/modules/: service.rs
engine/src/modules/application/: controller.rs  mod.rs  model.rs  service.rs
engine/src/modules/application_build/: mod.rs  model.rs
engine/src/modules/application_collaborator/: controller.rs  model.rs
engine/src/modules/application_log/: service.rs
engine/src/modules/application_resource/: model.rs  service.rs
engine/src/modules/cluster/: mod.rs
engine/src/modules/database/: controller.rs  mod.rs  model.rs
engine/src/modules/database_table/: mod.rs  service.rs
engine/src/modules/database_table_field/: mod.rs  (+1 more)
(+203 files in other folders)
