[package]
name = "faasly-engine-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.3", features= ["multipart"] }
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hyper = "0.14"
tower = { version = "0.4.12", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace", "map-request-body", "util", "cors"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
dotenvy = "0.15"
jsonwebtoken = "8.1.1"
jwt = "0.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
schemars ={ version = "0.8.10", features = ["chrono", "uuid1"]}
chrono = { version = "0.4.22", features = ["serde"]}
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-ecr = "0.24.0"
aws-credential-types = "0.54.1"
zip = "0.6.2"
utoipa-swagger-ui = "2"
utoipa = { version = "2", features = ["actix_extras"] }
urlencoding = "2.1.2"
itertools = "0.10.5"
walkdir = "2.3.2"
bollard = "0.14.0"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4.38"
base64 = "0.21.0"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }