[package]
name = "build-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "8.1.1"
jwt = "0.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.22", features = ["serde"]}
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-ecr = "0.24.0"
aws-sdk-sqs = "0.24.0"
aws-types = "0.54.1"
aws-credential-types = "0.54.1"
zip = "0.6.2"
walkdir = "2.3.2"
bollard = "0.14.0"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4.38"
base64 = "0.21.0"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
dirs = "4.0"